[package]
name = "exec-uproc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caps = "0.5.5"
json = "0.12.4" 
libseccomp = "0.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
sys-mount = { version = "2.1.0", default-features = false}
